--- a/Codementor_Website/index_files/freelancer.css
+++ b/Codementor_Website/index_files/freelancer.css
@@ -24,12 +24,16 @@ a.active {
 h1,
 h2,
 h3,
-h4,
 h5,
 h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+h4 {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
 }
 hr.star-light,
 hr.star-primary {
@@ -40,23 +44,11 @@ hr.star-primary {
   max-width: 250px;
   margin: 25px auto 30px;
 }
-hr.star-light:after,
-hr.star-primary:after {
-  content: "\f005";
-  font-family: FontAwesome;
-  display: inline-block;
-  position: relative;
-  top: -0.8em;
-  font-size: 2em;
-  padding: 0 0.25em;
-}
+
 hr.star-light {
   border-color: white;
 }
-hr.star-light:after {
-  background-color: #18bc9c;
-  color: white;
-}
+
 hr.star-primary {
   border-color: #2c3e50;
 }
@@ -69,16 +61,17 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18bc9c;
   color: white;
+    background-color: #2c3e50;
+
 }
 header .container {
-  padding-top: 100px;
-  padding-bottom: 50px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 header img {
   display: block;
-  margin: 0 auto 20px;
+  margin: 0 auto 10px;
 }
 header .intro-text .name {
   display: block;
@@ -86,6 +79,7 @@ header .intro-text .name {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 2em;
+
 }
 header .intro-text .briefintro {
   font-size: 1.25em;
@@ -93,8 +87,8 @@ header .intro-text .briefintro {
 }
 @media (min-width: 768px) {
   header .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-bottom: 50px;
   }
   header .intro-text .name {
     font-size: 4.75em;
@@ -142,7 +136,7 @@ header .intro-text .briefintro {
   border: none;
 }
 section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 section h2 {
   margin: 0;
@@ -395,18 +389,38 @@ footer .footer-below {
   margin: 0 auto;
   right: 0;
 
-  width: 300px;
-  height: 300px;
-  border-radius: 150px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
+  width: 230px;
+  height: 220px;
+  border-radius: 120px;
+  -webkit-border-radius: 120px;
+  -moz-border-radius: 120px;
 }
 
 .rectangular {
   margin: 0 auto;
   right: 0;
 
-  width: 500px;
-  height: 300px;
-
+  width: 400px;
+  height: 240px;
 }
+
+.clubs {
+    margin: 0 auto;
+    right: 0;
+
+    width: 200px;
+    height: 120px;
+}
+
+.who{
+  background-color: lightcyan;
+}
+
+.bootcamp{
+  background-color: lightblue;
+}
+
+.whatget{
+  background-color: lightblue;
+}
+
