--- a/Codementor_Website/index_files/freelancer.css
+++ b/Codementor_Website/index_files/freelancer.css
@@ -21,19 +21,19 @@ a.active {
   color: #18bc9c;
   outline: none;
 }
-h1,
+h4,
 h2,
 h3,
 h5,
 h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
   font-weight: 700;
 }
 
-h4 {
+h1 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 hr.star-light,
 hr.star-primary {
@@ -424,3 +424,18 @@ footer .footer-below {
   background-color: lightblue;
 }
 
+
+.free{
+  background-color: lightcyan;
+
+
+}
+
+.express_interest{
+  background-color: cornflowerblue;
+  color: #000000;
+}
+
+.button{
+  background-color:  red;
+}
