--- a/Codementor_Website/index_files/freelancer.css
+++ b/Codementor_Website/index_files/freelancer.css
@@ -11,8 +11,10 @@ p {
   font-size: 20px;
 }
 p.small {
-  font-size: 16px;
+  font-size: 18px;
 }
+
+
 a,
 a:hover,
 a:focus,
@@ -413,29 +415,56 @@ footer .footer-below {
 }
 
 .who{
+  padding-top: 30px;
+  padding-bottom: 30px;
+
   background-color: lightcyan;
 }
 
 .bootcamp{
+  padding-top: 30px;
+  padding-bottom: 30px;
+
   background-color: lightblue;
 }
 
 .whatget{
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+
+
   background-color: lightblue;
 }
 
 
 .free{
+  padding-top: 30px;
+  padding-bottom: 30px;
+
   background-color: lightcyan;
 
 
 }
 
 .express_interest{
+  padding-top: 30px;
+  padding-bottom: 30px;
+
   background-color: cornflowerblue;
   color: #000000;
 }
 
-.button{
-  background-color:  red;
+
+.intro-para{
+  font-size: 22px;
+}
+
+@media (max-width: 480px) {
+  body{
+    font-size: 12px}
+  .intro-para{
+    font-size: 13px;
+  }
+
 }
