--- a/Codementor_v2/index_files/freelancer.css
+++ b/Codementor_v2/index_files/freelancer.css
@@ -516,6 +516,10 @@ h2{
   font-size: 22px;
 }
 
+h3{
+  font-size: 20px;
+}
+
 .secondary_text{
   font-size: 18px;
 }
@@ -524,30 +528,35 @@ h2{
   font-size: 14px;
 }
 
+.quaternary_text{
+  font-size: 12px;
+}
+
 #header_text{
   font-size: 50px;
 }
 
+#img_padding{
+  padding-bottom: 10px;
+}
+
+
 /* .index or #page-top can be used to stylize entire page */
 .index{
   color: red;
-  background-color: red;
 
 }
 
 #page-top{
   color: #353535;
-  background-color: #0a4b3e;
 }
 
-.section{
+section{
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding-top: 30px;
   padding-bottom: 30px;
-
-  background-color: red;
 }
 
 #section{
